fix(): ensure loader is visible on top of dialogs

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,12 +1,5 @@
 :host {
   display: block;
-  position: fixed;
-  top: 0;
-  right: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-
   .hidden {
     display: none;
   }
